--- a/eTools Ultimate/Views/Pages/Settings/ResourcePathPage.xaml
+++ b/eTools Ultimate/Views/Pages/Settings/ResourcePathPage.xaml
@@ -151,14 +151,14 @@
                     <!--  Info for advanced settings  -->
                     <ui:InfoBar Title="Settings" Message="Advanced Settings" />
 
-                    <!--  Custom Section  -->
+                    <!--  General Section  -->
                     <TextBlock
                         Margin="0,10,0,0"
                         FontSize="16"
                         FontWeight="Bold"
-                        Text="{i18n:StringLocalizer 'Custom'}" />
+                        Text="{i18n:StringLocalizer 'General'}" />
 
-                    <!--  Custom - Basic Files  -->
+                    <!--  General - General Files  -->
                     <Grid Margin="0,10,0,12">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
@@ -359,7 +359,7 @@
                         Margin="0,10,0,0"
                         FontSize="16"
                         FontWeight="Bold"
-                        Text="{i18n:StringLocalizer 'Item'}" />
+                        Text="{i18n:StringLocalizer 'Items'}" />
 
                     <Grid Margin="0,10,0,12">
                         <Grid.ColumnDefinitions>
@@ -518,7 +518,7 @@
                         Margin="0,10,0,0"
                         FontSize="16"
                         FontWeight="Bold"
-                        Text="{i18n:StringLocalizer 'Mover'}" />
+                        Text="{i18n:StringLocalizer 'Movers'}" />
 
                     <Grid Margin="0,10,0,12">
                         <Grid.ColumnDefinitions>
@@ -622,68 +622,18 @@
                             </Button>
                         </Grid>
 
-                        <!--  PropMoverEx file  -->
+                        <!--  Checkboxes für PropMover  -->
                         <Grid
                             Grid.Row="1"
                             Grid.Column="0"
-                            Margin="0,0,10,0">
+                            Margin="0,0,10,10">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="120" />
                                 <ColumnDefinition Width="*" />
                                 <ColumnDefinition Width="Auto" />
-                            </Grid.ColumnDefinitions>
-                            <TextBlock
-                                Grid.Column="0"
-                                Margin="0,0,8,0"
-                                VerticalAlignment="Center"
-                                Text="{i18n:StringLocalizer 'PropMoverEx file'}" />
-                            <Grid Grid.Column="1" Margin="0,0,8,0">
-                                <TextBox
-                                    x:Name="PropMoverExFilePathTextbox"
-                                    IsHitTestVisible="False"
-                                    Text="{Binding Settings.PropMoverExFilePath, Mode=TwoWay}" />
-                                <TextBlock
-                                    Margin="10,0,10,0"
-                                    HorizontalAlignment="Left"
-                                    VerticalAlignment="Center"
-                                    Foreground="DarkGray"
-                                    IsHitTestVisible="False"
-                                    Text="{Binding Settings.DefaultPropMoverExFilePath, Mode=OneWay}">
-                                    <TextBlock.Style>
-                                        <Style TargetType="{x:Type TextBlock}">
-                                            <Setter Property="Visibility" Value="Collapsed" />
-                                            <Style.Triggers>
-                                                <DataTrigger Binding="{Binding Text, ElementName=PropMoverExFilePathTextbox}" Value="">
-                                                    <Setter Property="Visibility" Value="Visible" />
-                                                </DataTrigger>
-                                            </Style.Triggers>
-                                        </Style>
-                                    </TextBlock.Style>
-                                </TextBlock>
-                            </Grid>
-                            <Button
-                                Grid.Column="2"
-                                Width="60"
-                                Height="35"
-                                HorizontalAlignment="Center"
-                                Command="{Binding SelectPropMoverExFileCommand}">
-                                <ui:SymbolIcon Symbol="FolderOpen20" />
-                            </Button>
-                        </Grid>
-
-                        <!--  Checkboxes für PropMoverEx  -->
-                        <Grid
-                            Grid.Row="1"
-                            Grid.Column="1"
-                            Margin="10,0,0,0">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="Auto" />
-                                <ColumnDefinition Width="Auto" />
                                 <ColumnDefinition Width="Auto" />
                             </Grid.ColumnDefinitions>
                             <TextBlock
                                 Grid.Column="0"
-                                Margin="0,0,10,0"
                                 VerticalAlignment="Center"
                                 Text="{i18n:StringLocalizer '64 Bit'}" />
                             <CheckBox
@@ -855,163 +805,6 @@
                             </StackPanel>
                         </Grid>
                     </Grid>
-
-                    <!--  Skill Section  -->
-                    <TextBlock
-                        Margin="0,10,0,0"
-                        FontSize="16"
-                        FontWeight="Bold"
-                        Text="{i18n:StringLocalizer 'Skill'}" />
-
-                    <Grid Margin="0,10,0,12">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="*" />
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
-
-                        <!--  PropSkill file  -->
-                        <Grid
-                            Grid.Row="0"
-                            Grid.Column="0"
-                            Margin="0,0,10,10">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="120" />
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="Auto" />
-                            </Grid.ColumnDefinitions>
-                            <TextBlock
-                                Grid.Column="0"
-                                Margin="0,0,8,0"
-                                VerticalAlignment="Center"
-                                Text="{i18n:StringLocalizer 'PropSkill file'}" />
-                            <Grid Grid.Column="1" Margin="0,0,8,0">
-                                <TextBox x:Name="PropSkillFilePathTextbox" Text="{Binding Settings.PropSkillFilePath, Mode=TwoWay}" />
-                                <TextBlock
-                                    Margin="10,0,10,0"
-                                    HorizontalAlignment="Left"
-                                    VerticalAlignment="Center"
-                                    Foreground="DarkGray"
-                                    IsHitTestVisible="False"
-                                    Text="{Binding Settings.DefaultPropSkillFilePath, Mode=OneWay}">
-                                    <TextBlock.Style>
-                                        <Style TargetType="{x:Type TextBlock}">
-                                            <Setter Property="Visibility" Value="Collapsed" />
-                                            <Style.Triggers>
-                                                <DataTrigger Binding="{Binding Text, ElementName=PropSkillFilePathTextbox}" Value="">
-                                                    <Setter Property="Visibility" Value="Visible" />
-                                                </DataTrigger>
-                                            </Style.Triggers>
-                                        </Style>
-                                    </TextBlock.Style>
-                                </TextBlock>
-                            </Grid>
-                            <Button
-                                Grid.Column="2"
-                                Width="60"
-                                Height="35"
-                                HorizontalAlignment="Center"
-                                Command="{Binding SelectPropSkillFileCommand}">
-                                <ui:SymbolIcon Symbol="FolderOpen20" />
-                            </Button>
-                        </Grid>
-
-                        <!--  PropSkill.txt file  -->
-                        <Grid
-                            Grid.Row="0"
-                            Grid.Column="1"
-                            Margin="10,0,0,10">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="120" />
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="Auto" />
-                            </Grid.ColumnDefinitions>
-                            <TextBlock
-                                Grid.Column="0"
-                                Margin="0,0,8,0"
-                                VerticalAlignment="Center"
-                                Text="{i18n:StringLocalizer 'PropSkill.txt file'}" />
-                            <Grid Grid.Column="1" Margin="0,0,8,0">
-                                <TextBox x:Name="PropSkillTxtFilePathTextbox" Text="{Binding Settings.PropSkillTxtFilePath, Mode=TwoWay}" />
-                                <TextBlock
-                                    Margin="10,0,10,0"
-                                    HorizontalAlignment="Left"
-                                    VerticalAlignment="Center"
-                                    Foreground="DarkGray"
-                                    IsHitTestVisible="False"
-                                    Text="{Binding Settings.DefaultPropSkillTxtFilePath, Mode=OneWay}">
-                                    <TextBlock.Style>
-                                        <Style TargetType="{x:Type TextBlock}">
-                                            <Setter Property="Visibility" Value="Collapsed" />
-                                            <Style.Triggers>
-                                                <DataTrigger Binding="{Binding Text, ElementName=PropSkillTxtFilePathTextbox}" Value="">
-                                                    <Setter Property="Visibility" Value="Visible" />
-                                                </DataTrigger>
-                                            </Style.Triggers>
-                                        </Style>
-                                    </TextBlock.Style>
-                                </TextBlock>
-                            </Grid>
-                            <Button
-                                Grid.Column="2"
-                                Width="60"
-                                Height="35"
-                                HorizontalAlignment="Center"
-                                Command="{Binding SelectPropSkillTextFileCommand}">
-                                <ui:SymbolIcon Symbol="FolderOpen20" />
-                            </Button>
-                        </Grid>
-
-                        <!--  Skill Icon folder  -->
-                        <Grid
-                            Grid.Row="1"
-                            Grid.Column="0"
-                            Margin="0,0,10,10">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="120" />
-                                <ColumnDefinition Width="*" />
-                                <ColumnDefinition Width="Auto" />
-                            </Grid.ColumnDefinitions>
-                            <TextBlock
-                                Grid.Column="0"
-                                Margin="0,0,8,0"
-                                VerticalAlignment="Center"
-                                Text="{i18n:StringLocalizer 'Icon folder'}" />
-                            <Grid Grid.Column="1" Margin="0,0,8,0">
-                                <TextBox x:Name="SkillIconsFolderPathTextbox" Text="{Binding Settings.SkillIconsFolderPath, Mode=TwoWay}" />
-                                <TextBlock
-                                    Margin="10,0,10,0"
-                                    HorizontalAlignment="Left"
-                                    VerticalAlignment="Center"
-                                    Foreground="DarkGray"
-                                    IsHitTestVisible="False"
-                                    Text="{Binding Settings.DefaultSkillIconsFolderPath, Mode=OneWay}">
-                                    <TextBlock.Style>
-                                        <Style TargetType="{x:Type TextBlock}">
-                                            <Setter Property="Visibility" Value="Collapsed" />
-                                            <Style.Triggers>
-                                                <DataTrigger Binding="{Binding Text, ElementName=SkillIconsFolderPathTextbox}" Value="">
-                                                    <Setter Property="Visibility" Value="Visible" />
-                                                </DataTrigger>
-                                            </Style.Triggers>
-                                        </Style>
-                                    </TextBlock.Style>
-                                </TextBlock>
-                            </Grid>
-                            <Button
-                                Grid.Column="2"
-                                Width="60"
-                                Height="35"
-                                HorizontalAlignment="Center"
-                                Command="{Binding SelectSkillIconsFolderCommand}">
-                                <ui:SymbolIcon Symbol="FolderOpen20" />
-                            </Button>
-                        </Grid>
-                    </Grid>
-
                 </StackPanel>
             </StackPanel>
         </ScrollViewer>
