settings add mover AI/type binding (wip)

--- a/eTools Ultimate/Views/Pages/Settings/ResourcePathPage.xaml
+++ b/eTools Ultimate/Views/Pages/Settings/ResourcePathPage.xaml
@@ -791,7 +791,7 @@
                                     Width="60"
                                     Height="40"
                                     Margin="0,0,0,10"
-                                    Command="{Binding AddResourceCommand}"
+                                    Command="{Binding AddMoverAiBindingCommand}"
                                     ToolTip="{i18n:StringLocalizer 'Add'}">
                                     <ui:SymbolIcon Symbol="Add24" />
                                 </Button>
