--- a/eTools Ultimate/Views/Pages/Settings/ResourcePathPage.xaml
+++ b/eTools Ultimate/Views/Pages/Settings/ResourcePathPage.xaml
@@ -19,6 +19,13 @@
 
     <Page.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+        <Style x:Key="InfoIconStyle" TargetType="ui:SymbolIcon">
+            <Setter Property="HorizontalAlignment" Value="Right" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="FontSize" Value="16" />
+            <Setter Property="Margin" Value="5,0,0,0" />
+            <Setter Property="Foreground" Value="{DynamicResource TextFillColorSecondaryBrush}" />
+        </Style>
     </Page.Resources>
 
     <Grid>
@@ -652,7 +659,14 @@
                     </Grid>
 
                     <!--  AI Assignment Titel als Information  -->
-                    <TextBlock Margin="0,10,0,0" Text="{i18n:StringLocalizer 'Mover types configuration'}" />
+                    <StackPanel Margin="0,10,0,0" Orientation="Horizontal">
+                        <TextBlock Text="{i18n:StringLocalizer 'Mover types configuration'}" />
+                        <ui:SymbolIcon Style="{StaticResource InfoIconStyle}" Symbol="Info20">
+                            <ui:SymbolIcon.ToolTip>
+                                <ToolTip Content="{i18n:StringLocalizer 'Allows the application to determine the type of a mover based on its AI property.'}" />
+                            </ui:SymbolIcon.ToolTip>
+                        </ui:SymbolIcon>
+                    </StackPanel>
 
                     <!--  AI Assignment Container innerhalb der Mover Sektion  -->
                     <Grid Margin="0,10,0,12">
@@ -744,11 +758,17 @@
                                         Grid.Row="0"
                                         Margin="10,10,10,5"
                                         FontWeight="SemiBold"
-                                        Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-                                        Text="{i18n:StringLocalizer 'Assigned AI'}" />
+                                        Foreground="{DynamicResource TextFillColorPrimaryBrush}">
+                                        <TextBlock.Text>
+                                            <MultiBinding StringFormat="{i18n:StringLocalizer 'AIs assigned to {0}'}">
+                                                <Binding ElementName="MoverTypeBindingTypeListView" Path="SelectedItem.Key" />
+                                            </MultiBinding>
+                                        </TextBlock.Text>
+                                    </TextBlock>
 
                                     <!--  ListView  -->
                                     <ListView
+                                        x:Name="MoverTypeBindingAiListView"
                                         Grid.Row="1"
                                         Margin="5,0,5,5"
                                         Background="Transparent"
@@ -787,21 +807,43 @@
                                 Margin="10,0,0,0"
                                 VerticalAlignment="Top"
                                 Orientation="Vertical">
-                                <Button
+                                <ui:Button
                                     Width="60"
                                     Height="40"
                                     Margin="0,0,0,10"
+                                    Appearance="Secondary"
                                     Command="{Binding AddMoverAiBindingCommand}"
+                                    CommandParameter="{Binding SelectedItem, ElementName=MoverTypeBindingTypeListView}"
                                     ToolTip="{i18n:StringLocalizer 'Add'}">
+                                    <ui:Button.Style>
+                                        <Style BasedOn="{StaticResource {x:Type ui:Button}}" TargetType="{x:Type ui:Button}">
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding SelectedItem, ElementName=MoverTypeBindingTypeListView}" Value="{x:Null}">
+                                                    <Setter Property="IsEnabled" Value="False" />
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </ui:Button.Style>
                                     <ui:SymbolIcon Symbol="Add24" />
-                                </Button>
-                                <Button
+                                </ui:Button>
+                                <ui:Button
                                     Width="60"
                                     Height="40"
-                                    Command="{Binding RemoveResourceCommand}"
+                                    Appearance="Secondary"
+                                    Command="{Binding RemoveMoverAiBindingCommand}"
+                                    CommandParameter="{Binding SelectedItem, ElementName=MoverTypeBindingAiListView}"
                                     ToolTip="{i18n:StringLocalizer 'Delete'}">
+                                    <ui:Button.Style>
+                                        <Style BasedOn="{StaticResource {x:Type ui:Button}}" TargetType="{x:Type ui:Button}">
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding SelectedItem, ElementName=MoverTypeBindingAiListView}" Value="{x:Null}">
+                                                    <Setter Property="IsEnabled" Value="False" />
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </ui:Button.Style>
                                     <ui:SymbolIcon Symbol="Delete24" />
-                                </Button>
+                                </ui:Button>
                             </StackPanel>
                         </Grid>
                     </Grid>
