--- a/eTools Ultimate/Views/Pages/Settings/ConfigurationPage.xaml
+++ b/eTools Ultimate/Views/Pages/Settings/ConfigurationPage.xaml
@@ -1,5 +1,5 @@
 <Page
-    x:Class="eTools_Ultimate.Views.Pages.ResourcePathPage"
+    x:Class="eTools_Ultimate.Views.Pages.ConfigurationPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,8 +8,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     xmlns:vm="clr-namespace:eTools_Ultimate.ViewModels.Pages"
-    Title="ResourcePath"
-    d:DataContext="{d:DesignInstance Type=vm:ResourcePathViewModel,
+    Title="Configuration"
+    d:DataContext="{d:DesignInstance Type=vm:ConfigurationViewModel,
                                      IsDesignTimeCreatable=False}"
     d:DesignHeight="1000"
     d:DesignWidth="800"
